--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="utf-8">
 <head>
   <title>Lucas Silva</title>
   <meta charset="utf-8">
@@ -14,7 +14,7 @@
 
 <!-- notification for small viewports and landscape oriented smartphones -->
 <div class="device-notification">
-  <a class="device-notification--logo" href="#0">
+  <a class="device-notification--logo" href="index.html">
     <img src="assets/img/logo.png" alt="Global">
     <p>Menino Lucas de DD</p>
   </a>
@@ -30,7 +30,7 @@
             <img src="assets/img/logo.png" alt="Global">
             <p>Menino Lucas de DD</p>
           </a>
-          <button class="header--cta cta">Hire Us</button>
+          <button class="header--cta cta">Próximo</button>
           <div class="header--nav-toggle">
             <span></span>
           </div>
@@ -63,6 +63,7 @@
                 <a href="#0">
                   <h3>Bilíngua</h3>
                   <p>Aplicativo para educação, para o ensino de libras e português.</p>
+                  
                 </a>
                 <a href="#0">
                   <h3>Em breve</h3>
@@ -85,26 +86,26 @@
                       <div class="slider--item-image">
                         <img src="assets/img/work-victory.jpg" alt="Victory">
                       </div>
-                      <p class="slider--item-title">Bilíngua</p>
-                      <p class="slider--item-description">Aplicativo para educação, para o ensino de libras e português.</p>
+                      <p class="slider--item-title">Tipografia</p>
+                      <p class="slider--item-description">Tipografia desenvolvida em uma disciplina<b>do curso de Design Digital.</b></r></p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-metiew-smith.jpg" alt="Metiew and Smith">
+                        <img src="assets/img/Bili.png" alt="Metiew and Smith">
                       </div>
-                      <p class="slider--item-title">Bilíngua - Libras e Português</p>
-                      <p class="slider--item-description">Aplicativo de educação de ensino para a libras e o português.</p>
+                      <p class="slider--item-title">Bilíngua -<br> Libras e Português</p>
+                      <p class="slider--item-description">Aplicativo de educação de ensino para a libras e o por.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
+                        <img src="assets/img/Muviq.png" alt="Alex Nowak">
                       </div>
-                      <p class="slider--item-title">Alex Nowak</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">MUVIQ</p>
+                      <p class="slider--item-description">Aplicativo de realidade virtual para o museu histórico, <strong> Jacisto de Sousa</strong> </p>
                     </a>
                   </li>
                 </ul>
@@ -131,8 +132,8 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>We<br>believe in<br>passionate<br>people</h2>
-                <a href="#0">Career
+                <h2>Saiba<br> mais<br>sobre<br>mim</h2>
+                <a href="http://lattes.cnpq.br/5798301851519370">Currículo
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                     <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -161,14 +162,14 @@
               <div class="contact--lockup">
                 <div class="modal">
                   <div class="modal--information">
-                    <p>Pawia 5, 31-154 Kraków, Poland</p>
-                    <a href="mailto:ouremail@gmail.com">ouremail@gmail.com</a>
-                    <a href="tel:+148126287560">+48 12 628 75 60</a>
+                    <p>Alto da Betânia, 240 Quixeramobim, Ceará.</p>
+                    <a href="mailto:lucasimap@gmail.com">lucasimap@gmail.com</a>
+                    <a href="tel:+5588992160275">+55 88 9 9216-0275</a>
                   </div>
                   <ul class="modal--options">
-                    <li><a href="#0">Bēhance</a></li>
-                    <li><a href="#0">dribbble</a></li>
-                    <li><a href="mailto:ouremail@gmail.com">Contact Us</a></li>
+                    <li><a href="https://linkedin.com/in/lucas-silva-6032b1123/">Linkedin</a></li>
+                    <li><a href="https://www.facebook.com/simplelucas">Facebook</a></li>
+                    <li><a href="mailto:lucasimap@gmail.com">Contato</a></li>
                   </ul>
                 </div>
               </div>
@@ -176,7 +177,7 @@
           </li>
           <li class="l-section section">
             <div class="hire">
-              <h2>You want us to do</h2>
+              <h2>Sobre o que você quer começar?</h2>
               <!-- checkout formspree.io for easy form setup -->
               <form class="work-request">
                 <div class="work-request--options">
@@ -189,7 +190,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      App Design
+                      Design de Aplicativos
                     </label>
                     <input id="opt-2" type="checkbox" value="graphic design">
                     <label for="opt-2">
@@ -199,7 +200,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      Graphic Design
+                      Design Gráfico
                     </label>
                     <input id="opt-3" type="checkbox" value="motion design">
                     <label for="opt-3">
@@ -209,7 +210,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      Motion Design
+                      Fotografia
                     </label>
                   </span>
                   <span class="options-b">
@@ -241,21 +242,22 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      Marketing
+                      Marketing Digital
                     </label>
                   </span>
                 </div>
                 <div class="work-request--information">
                   <div class="information-name">
                     <input id="name" type="text" spellcheck="false">
-                    <label for="name">Name</label>
+                    <label for="name">Nome</label>
                   </div>
                   <div class="information-email">
                     <input id="email" type="email" spellcheck="false">
                     <label for="email">Email</label>
+
                   </div>
                 </div>
-                <input type="submit" value="Send Request">
+                <input type="submit" value="Enviar Mensagem">
               </form>
             </div>
           </li>
@@ -269,6 +271,7 @@
     <li>Sobre</li>
     <li>Contatos</li>
     <li>Contrate-me</li>
+    <li href:"https://www.dd.quixada.ufc.br">Sobre o curso</li>
   </ul>
 </div>
 
