Contatos e muito mais
Atualizado com mais informações de contato.
PS: FREELA

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="keywords" content="global, template, html, sass, jquery">
   <meta name="author" content="Bucky Maler">
   <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
 
@@ -30,7 +31,7 @@
             <img src="assets/img/logo.png" alt="Global">
             <p>Menino Lucas de DD</p>
           </a>
-          <button class="header--cta cta">Próximo</button>
+          <button class="header--cta cta">Entrar em contato</button>
           <div class="header--nav-toggle">
             <span></span>
           </div>
@@ -108,6 +109,15 @@
                       <p class="slider--item-description">Aplicativo de realidade virtual para o museu histórico, <strong> Jacisto de Sousa</strong> </p>
                     </a>
                   </li>
+                  <li class="slider--item slider--item-right">
+                    <a href="#0">
+                      <div class="slider--item-image">
+                        <img src="assets/img/Driblle.png" alt="Alex Nowak">
+                      </div>
+                      <p class="slider--item-title">Line</p>
+                      <p class="slider--item-description">Fonte de texto desenvolvida na disciplina de Tipografia <strong> UFC - Quixadá</strong> </p>
+                    </a>
+                  </li>
                 </ul>
                 <div class="slider--prev">
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -132,6 +142,7 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
+                  <a data-pin-do="embedBoard" data-pin-lang="pt" data-pin-board-width="400" data-pin-scale-height="240" data-pin-scale-width="80" href="https://br.pinterest.com/lukinhasoliver1/portif%25C3%25B3lio/"></a>
                 <h2>Saiba<br> mais<br>sobre<br>mim</h2>
                 <a href="http://lattes.cnpq.br/5798301851519370">Currículo
                   <span>
@@ -144,17 +155,17 @@
                 </a>
                 <img src="assets/img/about-visual.png" alt="About Us">
               </div>
-              <!-- <div class="about--options">
-                <a href="#0">
-                  <h3>Winners</h3>
+              <div class="about--options">
+                <a href="https://br.pinterest.com/lukinhasoliver1/portif%C3%B3lio/">
+                  <h3>Pinterest</h3>
                 </a>
-                <a href="#0">
-                  <h3>Philosophy</h3>
+                <a href="https://www.facebook.com/simplelucas">
+                  <h3>Facebook</h3>
                 </a>
-                <a href="#0">
-                  <h3>History</h3>
+                <a href="https://www.instagram.com/meninolucasdedd">
+                  <h3>Instagram</h3>
                 </a>
-              </div> -->
+              </div>
             </div>
           </li>
           <li class="l-section section">
@@ -261,6 +272,9 @@
               </form>
             </div>
           </li>
+          <li class="about--options">
+            
+          </li>
         </ul>
       </div>
     </div>
@@ -271,7 +285,8 @@
     <li>Sobre</li>
     <li>Contatos</li>
     <li>Contrate-me</li>
-    <li href:"https://www.dd.quixada.ufc.br">Sobre o curso</li>
+    <li>Mundo a fora</li>
+
   </ul>
 </div>
 
