--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <meta name="author" content="Bucky Maler">
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="shortcut icon" href="favicon.ico" />
+  <script src="http://arquivos.weblibras.com.br/auto/wl-min.js"></script>
+<script>
+   var wl = new WebLibras();
+</script>
 </head>
 <body>
 
