--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   <meta name="author" content="Bucky Maler">
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="shortcut icon" href="favicon.ico" />
-  <script src="http://arquivos.weblibras.com.br/auto/wl-min.js"></script>
-<script>
-   var wl = new WebLibras();
-</script>
+  <script src="http://arquivos.weblibras.com.br/auto/wl-min.js">
+  </script>
+  <script>
+    var wl = new WebLibras();
+  </script>
 </head>
 <body>
 
