--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <div class="intro--options">
                 <a href="#0">
                   <h3>Bilíngua</h3>
-                  <p>Aplicativo para educação, para o ensino de libras e português.</p>
+                  <p>Aplicativo de Ensino de Libras e Português</p>
                   
                 </a>
                 <a href="#0">
