--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="utf-8">
 <head>
-  <title>Lucas Silva</title>
+  <script src="http://arquivos.weblibras.com.br/auto/wl-min.js">
+  </script>
+  <script>
+    var wl = new WebLibras();
+  </script>
+  <title>Lucas Silva | Designer Digital</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,11 +15,7 @@
   <meta name="author" content="Bucky Maler">
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="shortcut icon" href="favicon.ico" />
-  <script src="http://arquivos.weblibras.com.br/auto/wl-min.js">
-  </script>
-  <script>
-    var wl = new WebLibras();
-  </script>
+  
 </head>
 <body>
 
