--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="utf-8">
 <head>
  
-  <title>Lucas Silva | Designer Digital</title>
+  <title>Lucas Silva | DD-UFC</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
