Adicionado CARD Linkedin

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script>
     var wl = new WebLibras();
   </script>
+  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
   <meta name="description" content="Lucas Silva - Designer Digital">
   <meta name="keywords" content="global, template, html, sass, jquery, design digital, UFC, Quixada, UFC Quixada">
   <meta name="author" content="Bucky Maler">
@@ -200,6 +201,7 @@
               <h2>Sobre o que você quer começar?</h2>
               <!-- checkout formspree.io for easy form setup -->
               <form class="work-request">
+                                        <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="pt_BR" data-type="horizontal" data-theme="light" data-vanity="lucas-silva-6032b1123"><a class="LI-simple-link" href='https://br.linkedin.com/in/lucas-silva-6032b1123?trk=profile-badge'>Lucas Silva</a></div>
                 <div class="work-request--options">
                   <span class="options-a">
                     <input id="opt-1" type="checkbox" value="app design">
