--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
               <h2>Sobre o que você quer começar?</h2>
               <!-- checkout formspree.io for easy form setup -->
               <form class="work-request">
-                                        <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="pt_BR" data-type="horizontal" data-theme="light" data-vanity="lucas-silva-6032b1123"><a class="LI-simple-link" href='https://br.linkedin.com/in/lucas-silva-6032b1123?trk=profile-badge'>Lucas Silva</a></div>
+               <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="pt_BR" data-type="horizontal" data-theme="dark" data-vanity="lucas-silva-6032b1123"><a class="LI-simple-link" href='https://br.linkedin.com/in/lucas-silva-6032b1123?trk=profile-badge'>Lucas Silva</a></div>
                 <div class="work-request--options">
                   <span class="options-a">
                     <input id="opt-1" type="checkbox" value="app design">
