Link para o ISSUU

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                       </div>
                       <p class="slider--item-title">Bilíngua -<br> Libras e Português</p>
                       <p class="slider--item-description">Libras e Português, na palma da mão.</p>
+                      <p><a href="https://issuu.com/lucassilva959/docs/plano_executivo_-_bil__ngua">Veja mais</a></p>
                       
                   </li>
                   
